added new files

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,13 +2,13 @@ body{
     background-color: blue;
 }
 .whoiam{
-    background-color: blueviolet;
+    background-color: red;
 }
 .whatmyselflikes{
-    background-color: chartreuse;
+    background-color: yellow;
 }
 .whoiloveandwholovesmyself{
-    background-color: crimson;
+    background-color: chartreuse;
 }
 .whoaregoodtomyself{
     background-color: darkorange;
